--- a/src/stylesheets/components/layouts/_footer.scss
+++ b/src/stylesheets/components/layouts/_footer.scss
@@ -17,6 +17,10 @@ footer {
 
   .footer-logo {
     width: 30px;
-    margin-top: 10px;
+    margin: 1.5em 1em 0;
+  }
+
+  .github img {
+    opacity: 0.5;
   }
 }
