--- a/src/stylesheets/components/layouts/_footer.scss
+++ b/src/stylesheets/components/layouts/_footer.scss
@@ -17,10 +17,10 @@ footer {
 
   .footer-logo {
     width: 30px;
-    margin: 1.5em 1em 0;
+    margin: 0.5em 0.5em 0;
   }
 
-  .github img {
-    opacity: 0.5;
+  .footer-logo.github {
+    opacity: 0.1;
   }
 }
