--- a/src/stylesheets/base/_typography.scss
+++ b/src/stylesheets/base/_typography.scss
@@ -16,9 +16,10 @@ h1 {
 }
 h2 {
   margin-bottom: 1rem;
-  font-size: 28px;
+  font-size: 1.8em;
   font-weight: 900;
   line-height: 40px;
+  line-height: 1.3;
 }
 h3 {
   margin-bottom: 1rem;
