--- a/src/stylesheets/components/_blog-posts.scss
+++ b/src/stylesheets/components/_blog-posts.scss
@@ -3,7 +3,7 @@
     margin-bottom: 3rem;
 
     h2 {
-      margin: 0;
+      margin: 0 0 0.2em;
       color: #353535;
       text-align: left;
     }
