--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -590,7 +590,7 @@ em {
 }
 
 .post-header {
-  padding: 20px 0;
+  padding: 1em 0;
 }
 
 .post-header .back {
@@ -637,7 +637,7 @@ footer a {
 
 footer .footer-logo {
   width: 30px;
-  margin: 0.5em 0.5em 0;
+  margin: 0.5em 0.7em 0;
 }
 
 footer .footer-logo.github {
